[package]
name = "kvs"
description = "A key-value store"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.32.0"
thiserror = "1.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
dirs = "3.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
